UI being developed

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,16 +7,15 @@
         <title>PB_Articles_App</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/static/css/style.css">
     </head>
-    <body>
-        <header>
-            <h1>Home Page</h1>
-        </header>
+    <body class="mybody">
+        
+        {% block contents %}
 
+        {% endblock contents%}
+        
         <script src="" async defer></script>
     </body>
-    <footer>
-
-    </footer>
+   
 </html>
