--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,10 @@
-.mybody{
-    background-color: rgb(56, 142, 218);
+body{
+    background-color: rgb(215, 233, 248);
     color:#041608;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .apptitle{
-    font-size: 24px;
+    font-size: 36px;
     
 }
