--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/static/css/style.css">
     </head>
-    <body class="mybody">
+    <body>
         
         {% block contents %}
 
