--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,7 @@
-body{
-    background-color: rgb(215, 233, 248);
-    color:#041608;
+html{
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .apptitle{
-    font-size: 36px;
-    
+    font-size : 24px;
 }
